<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="sign_in_to_scout">Sign in to Scout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in_automatic_remember">Sign in (Automatic remember)</string>
    <string name="app_name">Vex Scout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_username">Email</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_title">Static Scout</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="event_list_title">Events</string>
    <string name="loading">Loading</string>
    <string name="action_add_event">Add Events</string>
</resources>