<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:windowSoftInputMode="adjustResize|adjustPan"
    tools:context=".layout.LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingBottom="20dp"
            android:paddingTop="5dp"
            android:text="@string/login_title"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/loginUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginTitle"
            android:hint="@string/login_username"
            android:singleLine="true"
            android:windowSoftInputMode="stateAlwaysHidden" />

        <android.support.v4.widget.Space
            android:id="@+id/loginDivider1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginUsername"
            android:paddingTop="5dp" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginDivider1"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:windowSoftInputMode="stateAlwaysHidden" />

        <android.support.v4.widget.Space
            android:id="@+id/loginDivider2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginPassword"
            android:paddingTop="5dp" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginDivider2"
            android:onClick="loginButtonClicked"
            android:text="@string/login_button" />
    </RelativeLayout>
</RelativeLayout>
